--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "vite build",
+    "deploy": "vercel --prod",
+    "deploy:vercel": "node scripts/deploy-to-vercel.js",
+    "deploy:vercel:win": "powershell -ExecutionPolicy Bypass -File scripts/deploy-to-vercel.ps1"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@supabase/supabase-js": "^2.39.3",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
